--- a/css/style.css
+++ b/css/style.css
@@ -481,10 +481,10 @@ position: unset;
 	font-family: 'OpenSans-Regular';
 }
 .work-card i{
-	font-size: 25px;
-	position: absolute;
-    top: 5px;
-    right: 10px;
+	display: flex;
+    width: 100%;
+    justify-content: center;
+    font-size: 26px;
 }
 
 .yourn-need-wrapper{
@@ -1005,6 +1005,13 @@ footer{
 		margin-bottom: 30px;
 		text-align: left;
 	}
+	.work-card i {
+	display: flex;
+    font-size: 26px;
+    position: absolute;
+    top: 0px;
+    justify-content: flex-end;
+	}
 	.card-outer {
 		max-width: 100%;
 	}
@@ -1074,6 +1081,7 @@ footer{
 	.scroll-section {
 		top: 10px;
 	}
+	
 }
 @media ( min-width: 932px ){
 	
